--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<head>
-	<script type="text/javascript" src="clock.js"></script>
-</head>
-<body>
-	<canvas id="canvas" width="300" height="300"></canvas>
-</body>
+<html>
+   <head>
+      <title>Untitled</title>
+   </head>
+   <body>
+      Hi<br>
+      Welcome Everyone<br><br><br><br><br><br>
+      Nice to meet you all<br>
+   </body>
+</html>
